--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,32 @@
-
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.weather-app {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #333;
+  border-radius: 10px;
+}
+h1 {
+  color: #333;
+  font-size: 24px;
+  font-weight: 100px;
+  line-height: 28px;
+  text-align: left;
+  margin-bottom: 0;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #878787;
+  font-size: 16px;
+  font-weight: 100px;
+  line-height: 21px;
+  text-align: left;
+}
