--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,7 @@ li {
   font-weight: 100px;
   line-height: 21px;
   text-align: left;
+  text-transform: capitalize;
 }
 .weather-app-wrapper {
   max-width: 600px;
